# CompetitivePrograming

./: CompetitivePrograming.sln  README.md
EulerProject/: EulerProject.vcxproj  EulerProject.vcxproj.filters  GenericProblem.h  Problem1.cpp  Problem1.h  Problem2.cpp  Problem2.h  Problem3.cpp  Problem3.h  Problem4.cpp  Problem4.h  Problem5.cpp  Problem5.h  Problem6.cpp  Problem6.h  Problem7.cpp  Problem7.h  Problem8.cpp  Problem8.h  Problem9.cpp  Problem9.h  Source.cpp
Rosalind/: AlgoritmicHeights.hpp  BasicGraph.hpp  BasicNode.hpp  BigInteger.cpp  BigInteger.h  BioStronghold.hpp  CMakeLists.txt  Functions.hpp  HelperFunctions.hpp  Networking.hpp  Rosalind.vcxproj  Rosalind.vcxproj.filters  Source.cpp
Rosalind/AlgorithmicHeights/: rosalind_2sum.txt  rosalind_3sum.txt  rosalind_bf.txt  rosalind_bfs.txt  rosalind_bins.txt  rosalind_bip.txt  rosalind_cc.txt  rosalind_cte.txt  rosalind_dag.txt  rosalind_ddeg.txt  rosalind_deg.txt  rosalind_dij.txt  rosalind_hea.txt  rosalind_hs.txt  rosalind_ins.txt  rosalind_inv.txt  rosalind_maj.txt  rosalind_mer.txt  rosalind_ms.txt  rosalind_nwc.txt  rosalind_par.txt  rosalind_par3.txt  rosalind_sdag.txt  rosalind_ts.txt
Rosalind/BioStronghold/: rosalind_dna.txt  rosalind_iev.txt  rosalind_mrna.txt  rosalind_revc.txt  rosalind_seto.txt  rosalind_splc.txt  rosalind_subs.txt  rosalind_tree.txt
Rosalind/datasets/: rosalind_cons.txt  rosalind_gc.txt  rosalind_grph.txt  rosalind_hamm.txt  rosalind_iprb.txt  rosalind_long.txt  rosalind_orf.txt  rosalind_pmch.txt  rosalind_prot.txt  rosalind_prtm.txt  rosalind_revp.txt  rosalind_rna.txt
(+3 files in other folders)
